# qs2

./: .bazelrc  .graphqlrc.yml  BUILD.bazel  README.md  WORKSPACE  package.json  tsconfig.json
bzl_rules/: ts.bzl
bzl_rules/ts_auto_deps/: BUILD  auto_deps.ts
src/ts/: BUILD  context.ts  server.ts
src/ts/db/: BUILD
src/ts/resolvers/: BUILD  BUILD.bazel  index.ts
src/ts/resolvers/custom/: BUILD
src/ts/schema/: BUILD  index.ts
src/ts/subscriptions/: BUILD
types/: context.d.ts
types/db/: index.d.ts
types/resolvers/: index.d.ts
types/resolvers/custom/: index.d.ts
types/schema/: generated.d.ts
types/subscriptions/: index.d.ts
